# email_grabber

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
crawler/: Dockerfile  requirements.txt
crawler/crawler/: blacklist.txt  items.py  middlewares.py  pipelines.py  settings.py
crawler/crawler/spiders/: market_intel.py
db/: init.sql
lead_pipeline/: Dockerfile  requirements.txt
lead_pipeline/app/: config.py  db.py  email.py  main.py  models.py  schemas.py  tokens.py
lead_pipeline/app/templates/: confirmed.html  error.html  form.html  sent.html
tests/: conftest.py  test_crawler_extraction.py  test_signup_flow.py  test_tokens.py
