[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_grabber"
version = "0.1.0"
description = "Compliant market-intel crawler + opt-in lead pipeline for AU gambling research."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "betgroupglobal" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "black==24.10.0",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "pre-commit==3.8.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crawler*", "lead_pipeline*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = [
    "E501",   # black handles line length
    "B008",   # FastAPI Depends() / Form() in defaults is idiomatic
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
